# university-db

./: CMakeLists.txt  requirements.md
src/: .DataBase.txt  database.cpp  database.hpp  employee.cpp  employee.hpp  main.cpp  person.cpp  person.hpp  student.cpp  student.hpp  tests.cpp
